# pasr

./: CH4_BFER2.cti  CMakeLists.txt  README.md  lulaw19.cti
post/: README.md  display.py
src/: defs.hpp  params.hpp  pasr.cpp  reactor.cpp  reactor.hpp
